bindings/capi/include/tir.h

#ifndef TIR_H
#define TIR_H

#pragma once

/* Generated by cbindgen. Do not edit by hand. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

typedef struct TirContext TirContext;
typedef struct TirPassManager TirPassManager;
#define TIR_INVALID_ID UINT32_MAX

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Create a context preloaded with the default dialects (builtin, ptr, scf,
 * vector). Free with [`tir_context_destroy`].
 */
TirContext *tir_context_create(void);

/**
 * Destroy a context created by [`tir_context_create`]. Null is ignored.
 *
 * # Safety
 * `ctx` must be null or a context from [`tir_context_create`] not yet destroyed.
 */
void tir_context_destroy(TirContext *ctx);

/**
 * Message of the most recent failure on this thread, or null if none. The
 * pointer is valid until the next TIR call on the same thread.
 */
const char *tir_last_error(void);

/**
 * Free a string returned by the TIR FFI. Null is ignored.
 *
 * # Safety
 * `s` must be null or a string returned by this library, not yet freed.
 */
void tir_string_free(char *s);

/**
 * Parse a textual module from `src` (`len` bytes). Returns the module op id, or
 * [`TIR_INVALID_ID`] on error.
 *
 * # Safety
 * `ctx` must be a valid context; `src` must be null or readable for `len` bytes.
 */
uint32_t tir_parse_module(const TirContext *ctx, const char *src, uintptr_t len);

/**
 * Render the op `id` to a newly allocated C string, or null on error. Free the
 * result with [`tir_string_free`].
 *
 * # Safety
 * `ctx` must be a valid context from [`tir_context_create`].
 */
char *tir_op_to_string(const TirContext *ctx, uint32_t id);

/**
 * Parse an MLIR-style pass pipeline (e.g. `builtin.func(mem2reg)`) from a
 * null-terminated string. Returns a manager handle, or null on error. Free
 * with [`tir_pipeline_destroy`].
 *
 * # Safety
 * `spec` must be null or a valid NUL-terminated C string.
 */
TirPassManager *tir_pipeline_parse(const char *spec);

/**
 * Run a parsed pipeline over the op `root` in `ctx`. Returns false on error.
 *
 * # Safety
 * `pm` must be a valid pipeline and `ctx` a valid context, or null.
 */
bool tir_pipeline_run(TirPassManager *pm, const TirContext *ctx, uint32_t root);

/**
 * Destroy a pipeline created by [`tir_pipeline_parse`]. Null is ignored.
 *
 * # Safety
 * `pm` must be null or a pipeline from [`tir_pipeline_parse`] not yet destroyed.
 */
void tir_pipeline_destroy(TirPassManager *pm);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* TIR_H */